# jupedsim-web-community

./: .gitignore  LICENSE  PLAN-smooth-scenario-api.md  README.md  pyproject.toml  requirements-vv.txt
.github/workflows/: imo.yml  iso.yml  rimea.yml  scenario-examples.yml  vv.yml
docker/: .env.example  README.md  docker-compose.yml
geometries/ifc/: ISO-Test-1-IFC2x3.ifc
scripts/: README.md  bottleneck_zone_nt_diagram.ipynb  faster_is_slower.ipynb  iso20414_corridor_fd_test.ipynb  jupedsim_scenario.py  model_comparison.ipynb  pyproject.toml  requirements.txt  rimea07_demographic_params.ipynb  rimea10_route_allocation.ipynb  rimea12a_goal_position.ipynb  rimea12b_bottleneck_length.ipynb  rimea12d_bottleneck_width_flow.ipynb  rimea13_fd_stairs.ipynb  rimea14_route_choice.ipynb  rimea16_looped_ring_parameter_study.ipynb  scenario_scripting.ipynb  stage_routing_square_room.ipynb  template_script.ipynb  test_scenario_api.py  test_shared_examples.py
scripts/core/: scenario.py
scripts/scenarios/: checkpoint_to_exit.json  corridor_simple.json  flow_spawning.json
scripts/scenarios/bottleneck-zone/: config.json  geometry.wkt
scripts/scenarios/iso20414_corridor/: config.json  geometry.wkt
scripts/scenarios/waiting-stage-corridor/: config.json
shared/: direct_steering_runtime.py  simulation_init.py
templates/: AmplifyModel.ifc
tests/vv/: conftest.py  test_imo_behavior.py  test_imo_room_evacuation.py  test_imo_single_agent.py  test_registry.py  test_rimea.py  vv_helpers.py
